# openvino_rust_test

./: Cargo.toml  README.md
src/: main.rs
