[package]
name = "face"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openvino = { version = "^0.5.0", features = ["runtime-linking"] }

#openvino = { git = "https://github.com/intel/openvino-rs", features = ["runtime-linking"] }

openvino = { path = "../openvino-rs/crates/openvino", features = ["runtime-linking"] }

#openvino = { version = "^0.5.0", features = [] }

#openvino-sys = { version = "^0.5.0", features = ["runtime-linking"] }

# todo: Temp for TS openvino not finding install
env_logger = "0.10.0"